auth api + location api